--- a/roster.html
+++ b/roster.html
@@ -9,15 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="Bryan Cantz">
 
-    <title>Modern Classix</title>
+    <title>Modern Classix | Roster</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/myStyle.css" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-
-    <script type="text/javascript" src="https://cashmusic.org/public/cashmusic.js"></script>
 </head>
 
 <body>
@@ -25,7 +22,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -35,13 +32,13 @@
                     <img style="width:250px;" class="img-responsive" alt="Brand" src="img/ModernClassixLogo.png">
                 </a>
             </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Music <span class="sr-only">(current)</span></a>
+                    <li><a href="index.html">Music</a>
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
-                    <li><a href="roster.html">Roster</a>
+                    <li class="active"><a href="roster.html">Roster<span class="sr-only">(current)</span></a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
@@ -99,36 +96,46 @@
     </div>
     <!-- end Carousel -->
 
-    <!-- Music -->
-    <div id="music-cont" class="container">
-        <h1 class="text-center">Music</h1>
+    <!-- Roster -->
+    <div id="roster-cont" class="container">
         <div class="row">
-            <div class="col-lg-3">
-                <!-- Begin MailChimp Signup Form -->
-                <div id="mc_embed_signup">
-                    <form action="//ModernClassix.us11.list-manage.com/subscribe/post?u=f4291874a0d28db66079cf370&amp;id=4dc0dd7eb7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll">
-                            <label for="mce-EMAIL">Subscribe to our mailing list</label>
-                            <input style="width: 90%;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;">
-                                <input type="text" name="b_f4291874a0d28db66079cf370_4dc0dd7eb7" tabindex="-1" value="">
-                            </div>
-                            <div class="clear">
-                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                            </div>
-                        </div>
-                    </form>
+            <h1 class="text-center">Roster</h1>
+            <div class="col-lg-4">
+                <img style="margin: auto; width: 350px;" class="img-responsive" src="http://placehold.it/350x350"></img>
+                <div id="social-cont" class="text-center center-block">
+                    <a href="#"><i id="social" class="fa fa-facebook-square fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-twitter fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-soundcloud fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-youtube fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-instagram fa-3x"></i></a>
                 </div>
-                <!--End mc_embed_signup-->
+                <p class="text-center">Caption</p>
             </div>
-            <div class="col-lg-9">
-                <div class="show-non-mobile" style="width:100%; margin:auto; padding:0px; margin-bottom:20px; border:none; background:#000;"><iframe src="http://euphonybeats.com/@eplayer/desktop/index.html" width="100%" height="545" frameborder="0" style="border:none" scrolling="no" ></iframe></div>
-            <div class="show-mobile" style="width:100%; margin:auto; padding:0px; margin-bottom:20px; border:none; background:#000;"><iframe src="http://euphonybeats.com/@eplayer/mobile/index.html" width="100%" height="545" frameborder="0" style="border:none" scrolling="no" ></iframe></div>
+            <div class="col-lg-4">
+                <img style="margin: auto; width: 350px;" class="img-responsive" src="http://placehold.it/350x350"></img>
+                <div id="social-cont" class="text-center center-block">
+                    <a href="#"><i id="social" class="fa fa-facebook-square fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-twitter fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-soundcloud fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-youtube fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-instagram fa-3x"></i></a>
+                </div>
+                <p class="text-center">Caption</p>
+            </div>
+            <div class="col-lg-4">
+                <img style="margin: auto; width: 350px;" class="img-responsive" src="http://placehold.it/350x350"></img>
+                <div id="social-cont" class="text-center center-block">
+                    <a href="#"><i id="social" class="fa fa-facebook-square fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-twitter fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-soundcloud fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-youtube fa-3x"></i></a>
+                    <a href="#"><i id="social" class="fa fa-instagram fa-3x"></i></a>
+                </div>
+                <p class="text-center">Caption</p>
             </div>
         </div>
     </div>
-    <!-- end Music -->
+    <!-- end Roster -->
 
 
     <footer>
