--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default darkGrey">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img style="width:250px;" class="img-responsive" alt="Brand" src="img/ModernClassixLogo.png">
+                    <img alt="Brand" src="img/ModernClassixLogo.png">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
@@ -100,8 +100,8 @@
     <!-- end Carousel -->
 
     <!-- Music -->
-    <div id="music-cont" class="container">
-        <h1 class="text-center">Music</h1>
+    <div id="music-cont" class="container greyBlue">
+        <h1 class="text-center heading">Music</h1>
         <div class="row">
             <div class="col-lg-3">
                 <!-- Begin MailChimp Signup Form -->
@@ -130,17 +130,17 @@
     <!-- end Music -->
 
     <!-- About -->
-    <div id="about-cont" class="container">
+    <div id="about-cont" class="container baseBlue">
         <div class="row">
-            <h1 class="text-center">About</h1>
+            <h1 class="text-center heading">About</h1>
             <div class="col-lg-4 col-lg-offset-1">
                 <img style="margin: auto; width: 350px;" class="img-responsive" src="http://placehold.it/350x350"></img>
                 <p class="text-center">Caption</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-5">
                 <p1>Mission Statement Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p1>
                 <p2>Bio Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p2>
-                <h2 class="text-center">What we offer</h1>
+                <h2 class="text-center subheading">What we offer</h2>
                 <ul class="text-center">
                     <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
                     <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
@@ -154,9 +154,9 @@
     <!-- end About -->
 
     <!-- Roster -->
-    <div id="roster-cont" class="container">
+    <div id="roster-cont" class="container greyBlue">
         <div class="row">
-            <h1 class="text-center">Roster</h1>
+            <h1 class="text-center heading">Roster</h1>
             <div class="col-lg-4">
                 <img style="margin: auto; width: 350px;" class="img-responsive" src="http://placehold.it/350x350"></img>
                 <div id="social-cont" class="text-center center-block">
@@ -195,14 +195,13 @@
     <!-- end Roster -->
 
     <!-- Contact -->
-    <div id="contact-cont" class="container">
+    <div id="contact-cont" class="container baseBlue">
+        <h1 class="text-center heading">Contact us</h1>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <div class="well well-sm">
                     <form class="form-horizontal" action="" method="post">
                         <fieldset>
-                            <legend class="text-center">Contact us</legend>
-
                             <!-- Name input-->
                             <div class="form-group">
                                 <label class="col-md-3 control-label" for="name">Name</label>
@@ -242,7 +241,7 @@
     <!-- end Contact -->
 
 
-    <footer>
+    <footer class="darkGrey">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
